--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Biology</title>
+  <title>网易考拉</title>
   <base href="/">
-
+  <meta name="description" content="网易考拉官网, 网易自营100%正品! 买进口,上考拉!">
+  <meta name="keyword" content="网易考拉,海外购,代购">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
