--- a/client/src/index.html
+++ b/client/src/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style type="text/css">
     .spin-wrap {
-      position: fixed;
+      position: absolute;
       width: 100px;
       height: 100px;
       top: 0;
