--- a/client/src/index.html
+++ b/client/src/index.html
@@ -11,8 +11,8 @@
   <style type="text/css">
     .spin-wrap {
       position: absolute;
-      width: 100px;
-      height: 100px;
+      width: 72px;
+      height: 72px;
       top: 0;
       left: 0;
       bottom: 0;
@@ -20,12 +20,11 @@
       margin: auto;
     }
     .spin {
-      display: inline-block;
-      width: 100px;
-      height: 100px;
+      width: 72px;
+      height: 72px;
       border-radius: 50%;
-      border: solid 5px #0099ff;
-      border-bottom-color: #e6e6e6;
+      border: solid 5px #108ee9;
+      border-bottom-color: #e9e9e9;
       animation:myloading 1.5s infinite;
     }
 
